--- a/Assets/GameMain/Localization/ChineseSimplified/Dictionaries/Default.xml
+++ b/Assets/GameMain/Localization/ChineseSimplified/Dictionaries/Default.xml
@@ -15,6 +15,8 @@
     <String Key="Dialog.OtherButton" Value="" />
     <String Key="Dialog.StoryTitle" Value="下个剧情" />
     <String Key="Dialog.StoryMessage" Value="是否确认跳转到下个剧情" />
+    <String Key="Dialog.ResetStoryTitle" Value="重置" />
+    <String Key="Dialog.ResetStoryMessage" Value="是否重置剧情" />
     <String Key="Dialog.AchieveTitle" Value="恭喜你获得" />
     <String Key="Dialog.AchieveMessage" Value="" />
     <String Key="ForceUpdate.Title" Value="强制更新" />
